--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.9.13",
     "@types/jest": "^29.5.11",
-    "aws-sdk": "^2.1528.0",
+    "aws-sdk": "^2.1540.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "custom-env": "^2.0.2",
@@ -34,6 +34,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "pm2": "^5.3.0",
+    "puppeteer": "^21.7.0",
     "push.js": "^1.0.12",
     "redis": "^3.1.2",
     "redis-mock": "^0.56.3",
